# whisper_gpt_lineapp_server

./: .env.sample  .gitignore  LICENSE  README.md  build.sh  dev.sh  pyproject.toml
whisper_gpt_lineapp_server/: main.py
